// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli.js 1`] = `
/* @flow */

var f = require('./lib');

var y:number = f(0);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */

var f = require("./lib");

var y: number = f(0);

`;

exports[`cli2.js 1`] = `
/* @flow */

var f = require('./lib');

f("...");
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */

var f = require("./lib");

f("...");

`;

exports[`lib.js 1`] = `
/* @flow */

function g(x:string) { }

//function f(x) { g(x); return x; }
//function f(x:number) { g(x); return x; }
function f(x:number):number { g(x); return x; }

module.exports = f;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */

function g(x: string) {}

//function f(x) { g(x); return x; }
//function f(x:number) { g(x); return x; }
function f(x: number): number {
  g(x);
  return x;
}

module.exports = f;

`;
